Fix table text wrap

--- a/app/styles/app/base.scss
+++ b/app/styles/app/base.scss
@@ -328,3 +328,8 @@ span.emoji.emoji-sizer {
       display: none !important;
   }
 }
+
+.table-text {
+  word-break: break-all;
+  padding-right: 10px;
+}
